# cnmcu

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties
.github/workflows/: gradle.yml
buildSrc/: build.gradle
buildSrc/src/main/java/tools/elmfer/: CompileNatives.java  GenNativeSources.java  SaveVersion.java
src/main/cpp/: CMakeLists.txt
src/main/cpp/bridge/: README.txt  cnmcuJava.cpp  cnmcuJava.h  com_elmfer_cnmcu_cpp_NativesUtils.cpp  com_elmfer_cnmcu_cpp_NativesUtils.h  com_elmfer_cnmcu_mcu_NanoMCU.cpp  com_elmfer_cnmcu_mcu_NanoMCU.h  com_elmfer_cnmcu_mcu_cpu_MOS6502.cpp  com_elmfer_cnmcu_mcu_cpu_MOS6502.h  com_elmfer_cnmcu_mcu_modules_CNEL.cpp  com_elmfer_cnmcu_mcu_modules_CNEL.h  com_elmfer_cnmcu_mcu_modules_CNGPIO.cpp  com_elmfer_cnmcu_mcu_modules_CNGPIO.h  com_elmfer_cnmcu_mcu_modules_CNRAM.cpp  com_elmfer_cnmcu_mcu_modules_CNRAM.h  com_elmfer_cnmcu_mcu_modules_CNROM.cpp  com_elmfer_cnmcu_mcu_modules_CNROM.h  com_elmfer_cnmcu_mcu_modules_CNUART.cpp  com_elmfer_cnmcu_mcu_modules_CNUART.h  com_elmfer_cnmcu_mesh_Meshes.cpp  com_elmfer_cnmcu_mesh_Meshes.h
src/main/cpp/cnmcu/: CNEL.hpp  CNGPIO.hpp  CNRAM.hpp  CNUART.cpp  CNUART.hpp  MeshLoader.cpp  MeshLoader.hpp  Nano.cpp  Nano.hpp  ROM.hpp  mos6502.cpp  mos6502.h
src/main/java/com/elmfer/cnmcu/: CodeNodeMicrocontrollers.java  CodeNodeMicrocontrollersClient.java  EventHandler.java
src/main/java/com/elmfer/cnmcu/animation/: ClockTimer.java  Timer.java
src/main/java/com/elmfer/cnmcu/blockentities/: BlockEntities.java  CNnanoBlockEntity.java
src/main/java/com/elmfer/cnmcu/blocks/: Blocks.java  CNnanoBlock.java
src/main/java/com/elmfer/cnmcu/config/: Config.java  ModSetup.java
src/main/java/com/elmfer/cnmcu/cpp/: NativesLoader.java  NativesUtils.java  StrongNativeObject.java  WeakNativeObject.java
src/main/java/com/elmfer/cnmcu/mcu/: NanoMCU.java  Sketches.java  Toolchain.java
src/main/java/com/elmfer/cnmcu/mesh/: Mesh.java  MeshBaker.java  MeshBuilder.java  Meshes.java  VertexFormat.java
src/main/java/com/elmfer/cnmcu/model/: CNnanoModel.java  CodeNodeModelLoadingPlugin.java
src/main/resources/: fabric.mod.json
src/main/resources/assets/cnmcu/blockstates/: code_node_nano.json  nano.json
src/main/resources/assets/cnmcu/meshes/: code_node_nano_smd.ply  nano_pcb.ply
src/main/resources/assets/cnmcu/setup/: imgui.ini
vasm/: README.txt  vasm6502_oldstyle-linux-x64  vasm6502_oldstyle-macos-x64  vobjdump-linux-x64  vobjdump-macos-x64
(+26 files in other folders)
